update:#50 サインアウトIFの修正 * openapi * ハンドラ、サービス
